--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,13 @@
-<html>
-	<head>
-		<title>zcweng blog</title>
-	</head>
-	<body>
-		<div>
-			<h1><a href="">zcweng blog</a></h1>
-		</div>
-		{% for post in posts %}
-			<div>
-				<p>published: {{ post.published_date }}</p>
-				<h1><a href="">{{ post.title }}</a></h1>
-				<p>{{ post.text|linebreaksbr }}</p>
+{% extends 'blog/base.html' %}
+
+{% block content %}
+	{% for post in posts %}
+		<div class= "post">				
+			<h1><a href="{% url 'post_detail' post_id=post.pk %}">{{ post.title }}</a></h1>
+			<div class= "date">
+				{{ post.published_date }}
 			</div>
-		{% endfor %}	
-	</body>
-</html>
+			<p>{{ post.text|linebreaksbr }}</p>
+		</div>
+	{% endfor %}
+{% endblock content %}
