--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,13 +1,17 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-	<div class= "post">				
-		<h1>{{ post.title }}</h1>
+	<div class= "post">
 		{% if post.published_date %}
 			<div class= "date">
 				{{ post.published_date }}
 			</div>
-		{% endif %}
+		{% endif %}	
+		<h1>{{ post.title }}
+			{% if user.is_authenticated %}		
+				<a class="btn btn-default" href="{% url 'post_edit' post_id=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+			{% endif %}
+		</h1>	
 		<p>{{ post.text|linebreaksbr }}</p>
 	</div>
 {% endblock content %}
